--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Tu navegador no soporta el elemento de audio.
     </audio>
 
-    <button id="play-music">Música/button>
+    <button id="play-music">Música</button>
 
 
     <div class="container">
